// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDualRange props isDraggable renders draggable track when isDraggable=true 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="1"
      aria-valuetext="1, 8"
      class="euiRangeDraggable emotion-euiRangeDraggable"
      role="slider"
      style="inset-inline-start: -Infinity%; inset-inline-end: calc(100% - -Infinity% - 16px);"
      tabindex="0"
    >
      <div
        class="euiRangeDraggable__inner emotion-euiRangeDraggable__inner-enabled"
      />
    </div>
    <div
      aria-disabled="false"
      aria-valuemax="8"
      aria-valuemin="0"
      aria-valuenow="1"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="8"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start: 1%; inline-size: 7.000000000000001%;"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props levels renders levels when levels prop is set 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack-hasLevels"
  >
    <div
      class="euiRangeLevels emotion-euiRangeLevels-hasRange"
    >
      <span
        class="euiRangeLevel emotion-euiRangeLevel-danger"
        style="inset-inline-start: calc(0% + 0px); inset-inline-end: calc(100% - 0px);"
      />
      <span
        class="euiRangeLevel emotion-euiRangeLevel-success"
        style="inset-inline-start: calc(0% + 0px); inset-inline-end: calc(100% - 0px);"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-valuemax="8"
      aria-valuemin="0"
      aria-valuenow="1"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%; background-color: rgb(189, 39, 30);"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="8"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%; background-color: rgb(189, 39, 30);"
      tabindex="0"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="emotion-euiRangeHighlight__levelsWrapper"
        style="margin-inline-start: 1%; inline-size: 7.000000000000001%;"
      >
        <div
          class="emotion-euiRangeLevels-euiRangeHighlight__levels"
          style="inset-inline-start: -0px; inline-size: 0px;"
        >
          <span
            class="euiRangeLevel emotion-euiRangeLevel-danger"
            style="inset-inline-start: calc(0% + 0px); inset-inline-end: calc(100% - 0px);"
          />
          <span
            class="euiRangeLevel emotion-euiRangeLevel-success"
            style="inset-inline-start: calc(0% + 0px); inset-inline-end: calc(100% - 0px);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props maxInputProps allows overriding default props 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        class="euiFieldNumber euiRangeInput euiRangeInput--min emotion-euiRangeInput"
        max="8"
        min="0"
        name="undefined-minValue"
        step="1"
        style="inline-size: calc(12px + 1ch + 2em + 0px);"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-valuemax="8"
      aria-valuemin="0"
      aria-valuenow="1"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="-1"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="8"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="-1"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start: 1%; inline-size: 7.000000000000001%;"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        class="euiFieldNumber euiRangeInput euiRangeInput--max emotion-euiRangeInput"
        max="100"
        min="1"
        name="undefined-maxValue"
        step="1"
        style="inline-size: calc(12px + 3ch + 2em + 22px);"
        type="number"
        value="123"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props maxInputProps applies passed props to max input 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        class="euiFieldNumber euiRangeInput euiRangeInput--min emotion-euiRangeInput"
        max="8"
        min="0"
        name="undefined-minValue"
        step="1"
        style="inline-size: calc(12px + 1ch + 2em + 0px);"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-valuemax="8"
      aria-valuemin="0"
      aria-valuenow="1"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="-1"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="8"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="-1"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start: 1%; inline-size: 7.000000000000001%;"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Max value"
        class="euiFieldNumber euiRangeInput euiRangeInput--max emotion-euiRangeInput"
        max="100"
        min="1"
        name="undefined-maxValue"
        step="1"
        style="inline-size: calc(12px + 1ch + 2em + 22px);"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props minInputProps allows overriding default props 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        class="euiFieldNumber euiRangeInput euiRangeInput--min emotion-euiRangeInput"
        max="8"
        min="0"
        name="undefined-minValue"
        step="1"
        style="inline-size: calc(12px + 2ch + 2em + 22px);"
        type="number"
        value="123"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-valuemax="8"
      aria-valuemin="0"
      aria-valuenow="1"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="-1"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="8"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="-1"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start: 1%; inline-size: 7.000000000000001%;"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        class="euiFieldNumber euiRangeInput euiRangeInput--max emotion-euiRangeInput"
        max="100"
        min="1"
        name="undefined-maxValue"
        step="1"
        style="inline-size: calc(12px + 1ch + 2em + 22px);"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props minInputProps applies passed props to min input 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Min value"
        class="euiFieldNumber euiRangeInput euiRangeInput--min emotion-euiRangeInput"
        max="8"
        min="0"
        name="undefined-minValue"
        step="1"
        style="inline-size: calc(12px + 1ch + 2em + 0px);"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-valuemax="8"
      aria-valuemin="0"
      aria-valuenow="1"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="-1"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="8"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="-1"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start: 1%; inline-size: 7.000000000000001%;"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer emotion-euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        class="euiFieldNumber euiRangeInput euiRangeInput--max emotion-euiRangeInput"
        max="100"
        min="1"
        name="undefined-maxValue"
        step="1"
        style="inline-size: calc(12px + 1ch + 2em + 22px);"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props showLabels renders labels when showLabels=true 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <label
    class="euiRangeLabel emotion-euiRangeLabel-min"
  >
    0
  </label>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-valuemax="8"
      aria-valuemin="0"
      aria-valuenow="1"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="8"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start: 1%; inline-size: 7.000000000000001%;"
      />
    </div>
  </div>
  <label
    class="euiRangeLabel emotion-euiRangeLabel-max"
  >
    100
  </label>
</div>
`;

exports[`EuiDualRange props showRange hides range when showRange=false 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-valuemax="8"
      aria-valuemin="0"
      aria-valuenow="1"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="8"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`EuiDualRange props showRange renders range when showRange=true 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-valuemax="8"
      aria-valuemin="0"
      aria-valuenow="1"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="8"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start: 1%; inline-size: 7.000000000000001%;"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props value accepts empty strings 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-valuemax="0"
      aria-valuemin="0"
      aria-valuenow="0"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: NaN%;"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`EuiDualRange props value accepts numbers 1`] = `
<div
  class="euiRangeWrapper euiDualRange emotion-euiRangeWrapper-regular-euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-valuemax="8"
      aria-valuemin="0"
      aria-valuenow="1"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="8"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start: 1%; inline-size: 7.000000000000001%;"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange renders 1`] = `
<div
  class="euiRangeWrapper euiDualRange testClass1 testClass2 emotion-euiRangeWrapper-regular-euiDualRange-euiTestCss"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack emotion-euiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiRangeSlider euiDualRange__slider emotion-euiRangeSlider-hasRange-euiDualRange__slider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
      value=""
    />
    <div
      aria-disabled="false"
      aria-label="aria-label"
      aria-valuemax="8"
      aria-valuemin="0"
      aria-valuenow="1"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
    <div
      aria-disabled="false"
      aria-label="aria-label"
      aria-valuemax="100"
      aria-valuemin="1"
      aria-valuenow="8"
      class="euiRangeThumb emotion-euiRangeThumb"
      role="slider"
      style="inset-inline-start: -Infinity%;"
      tabindex="0"
    />
    <div
      class="euiRangeHighlight emotion-euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress emotion-euiRangeHighlight__progress"
        style="margin-inline-start: 1%; inline-size: 7.000000000000001%;"
      />
    </div>
  </div>
</div>
`;
